err/pyredpitaya.err
Listing '.'...
Listing './bin'...
Compiling './bin/rpyc_classic.py'...
Compiling './bin/rpyc_registry.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyRedPitaya'...
Listing './lib/python3.5/site-packages/PyRedPitaya/enum'...
Compiling './lib/python3.5/site-packages/PyRedPitaya/enum/enum.py'...
***   File "./lib/python3.5/site-packages/PyRedPitaya/enum/enum.py", line 34
    raise AttributeError, name
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/PyRedPitaya/instrument.py'...
***   File "./lib/python3.5/site-packages/PyRedPitaya/instrument.py", line 283
    print "Frequency too low: Impossible to sample the entire waveform"
                                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyRedPitaya/service.py'...
***   File "./lib/python3.5/site-packages/PyRedPitaya/service.py", line 7
    print "CONNECTION"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/PyRedPitaya-1.0.egg-info'...
Listing './lib/python3.5/site-packages/cached_property-1.3.1.dist-info'...
Listing './lib/python3.5/site-packages/myhdl'...
Listing './lib/python3.5/site-packages/myhdl/conversion'...
Listing './lib/python3.5/site-packages/myhdl-0.9.0.egg-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plumbum'...
Listing './lib/python3.5/site-packages/plumbum/cli'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/de'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/fr'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/nl'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/ru'...
Listing './lib/python3.5/site-packages/plumbum/cli/i18n/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/plumbum/colorlib'...
Listing './lib/python3.5/site-packages/plumbum/commands'...
Listing './lib/python3.5/site-packages/plumbum/fs'...
Listing './lib/python3.5/site-packages/plumbum/machines'...
Listing './lib/python3.5/site-packages/plumbum/path'...
Listing './lib/python3.5/site-packages/plumbum-1.6.5.dist-info'...
Listing './lib/python3.5/site-packages/rpyc'...
Listing './lib/python3.5/site-packages/rpyc/core'...
Listing './lib/python3.5/site-packages/rpyc/experimental'...
Listing './lib/python3.5/site-packages/rpyc/lib'...
Listing './lib/python3.5/site-packages/rpyc/utils'...
Listing './lib/python3.5/site-packages/rpyc-3.4.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/myhdl'...
Listing './share/myhdl/cosimulation'...
Listing './share/myhdl/cosimulation/cver'...
Listing './share/myhdl/cosimulation/cver/test'...
Compiling './share/myhdl/cosimulation/cver/test/bin2gray.py'...
Compiling './share/myhdl/cosimulation/cver/test/dff.py'...
Compiling './share/myhdl/cosimulation/cver/test/dff_clkout.py'...
Compiling './share/myhdl/cosimulation/cver/test/inc.py'...
Compiling './share/myhdl/cosimulation/cver/test/test_all.py'...
Listing './share/myhdl/cosimulation/icarus'...
Listing './share/myhdl/cosimulation/icarus/test'...
Compiling './share/myhdl/cosimulation/icarus/test/bin2gray.py'...
Compiling './share/myhdl/cosimulation/icarus/test/dff.py'...
Compiling './share/myhdl/cosimulation/icarus/test/dff_clkout.py'...
Compiling './share/myhdl/cosimulation/icarus/test/inc.py'...
Compiling './share/myhdl/cosimulation/icarus/test/test.py'...
Compiling './share/myhdl/cosimulation/icarus/test/test_all.py'...
Listing './share/myhdl/cosimulation/modelsim'...
Listing './share/myhdl/cosimulation/modelsim/test'...
Compiling './share/myhdl/cosimulation/modelsim/test/bin2gray.py'...
Compiling './share/myhdl/cosimulation/modelsim/test/dff.py'...
Compiling './share/myhdl/cosimulation/modelsim/test/dff_clkout.py'...
Compiling './share/myhdl/cosimulation/modelsim/test/inc.py'...
Compiling './share/myhdl/cosimulation/modelsim/test/test_all.py'...
Listing './share/myhdl/cosimulation/test'...
Compiling './share/myhdl/cosimulation/test/bin2gray.py'...
Compiling './share/myhdl/cosimulation/test/dff.py'...
Compiling './share/myhdl/cosimulation/test/dff_clkout.py'...
Compiling './share/myhdl/cosimulation/test/inc.py'...
Compiling './share/myhdl/cosimulation/test/test_all.py'...
Compiling './share/myhdl/cosimulation/test/test_bin2gray.py'...
Compiling './share/myhdl/cosimulation/test/test_dff.py'...
Compiling './share/myhdl/cosimulation/test/test_inc.py'...
Listing './share/myhdl/cosimulation/test/verilog'...
Listing './share/python-wheels'...
